--- a/src/Template/Bake/Controller/component.twig
+++ b/src/Template/Bake/Controller/component.twig
@@ -1,4 +1,4 @@
-<%
+{#
 /**
  * CakePHP(tm) : Rapid Development Framework (http://cakephp.org)
  * Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
@@ -9,20 +9,20 @@
  *
  * @copyright     Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
  * @link          http://cakephp.org CakePHP(tm) Project
- * @since         0.1.0
+ * @since         2.0.0
  * @license       http://www.opensource.org/licenses/mit-license.php MIT License
  */
-%>
+#}
 <?php
-namespace <%= $namespace %>\Controller\Component;
+namespace {{ namespace }}\Controller\Component;
 
 use Cake\Controller\Component;
 use Cake\Controller\ComponentRegistry;
 
 /**
- * <%= $name %> component
+ * {{ name }} component
  */
-class <%= $name %>Component extends Component
+class {{ name }}Component extends Component
 {
 
     /**
