--- a/src/Template/Bake/Element/Controller/add.twig
+++ b/src/Template/Bake/Element/Controller/add.twig
@@ -1,4 +1,4 @@
-<%
+{#
 /**
  * CakePHP(tm) : Rapid Development Framework (http://cakephp.org)
  * Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
@@ -9,11 +9,11 @@
  *
  * @copyright     Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
  * @link          http://cakephp.org CakePHP(tm) Project
- * @since         0.1.0
+ * @since         2.0.0
  * @license       http://www.opensource.org/licenses/mit-license.php MIT License
  */
-$compact = ["'" . $singularName . "'"];
-%>
+#}
+{% set compact = ["'#{singularName}'"] %}
 
     /**
      * Add method
@@ -22,31 +22,26 @@ $compact = ["'" . $singularName . "'"];
      */
     public function add()
     {
-        $<%= $singularName %> = $this-><%= $currentModelName %>->newEntity();
+        ${{ singularName }} = $this->{{ currentModelName }}->newEntity();
         if ($this->request->is('post')) {
-            $<%= $singularName %> = $this-><%= $currentModelName %>->patchEntity($<%= $singularName %>, $this->request->getData());
-            if ($this-><%= $currentModelName; %>->save($<%= $singularName %>)) {
-                $this->Flash->success(__('The <%= strtolower($singularHumanName) %> has been saved.'));
+            ${{ singularName }} = $this->{{ currentModelName }}->patchEntity(${{ singularName }}, $this->request->getData());
+            if ($this->{{ currentModelName }}->save(${{ singularName }})) {
+                $this->Flash->success(__('The {{ singularHumanName|lower }} has been saved.'));
 
                 return $this->redirect(['action' => 'index']);
             }
-            $this->Flash->error(__('The <%= strtolower($singularHumanName) %> could not be saved. Please, try again.'));
+            $this->Flash->error(__('The {{ singularHumanName|lower }} could not be saved. Please, try again.'));
         }
-<%
-        $associations = array_merge(
-            $this->Bake->aliasExtractor($modelObj, 'BelongsTo'),
-            $this->Bake->aliasExtractor($modelObj, 'BelongsToMany')
-        );
-        foreach ($associations as $assoc):
-            $association = $modelObj->association($assoc);
-            $otherName = $association->getTarget()->getAlias();
-            $otherPlural = $this->_variableName($otherName);
-%>
-        $<%= $otherPlural %> = $this-><%= $currentModelName %>-><%= $otherName %>->find('list', ['limit' => 200]);
-<%
-            $compact[] = "'$otherPlural'";
-        endforeach;
-%>
-        $this->set(compact(<%= join(', ', $compact) %>));
-        $this->set('_serialize', ['<%=$singularName%>']);
+{% set associations = Bake.aliasExtractor(modelObj, 'BelongsTo') %}
+{% set associations = associations|merge(Bake.aliasExtractor(modelObj, 'BelongsToMany')) %}
+
+{%- for assoc in associations %}
+    {%- set otherName = Bake.getAssociatedTableAlias(modelObj, assoc) %}
+    {%- set otherPlural = otherName|variable %}
+        ${{ otherPlural }} = $this->{{ currentModelName }}->{{ otherName }}->find('list', ['limit' => 200]);
+        {{- "\n" }}
+    {%- set compact = compact|merge(["'#{otherPlural}'"]) %}
+{% endfor %}
+        $this->set(compact({{ compact|join(', ')|raw }}));
+        $this->set('_serialize', ['{{ singularName }}']);
     }
