--- a/src/Template/Bake/Element/Controller/delete.twig
+++ b/src/Template/Bake/Element/Controller/delete.twig
@@ -1,4 +1,4 @@
-<%
+{#
 /**
  * CakePHP(tm) : Rapid Development Framework (http://cakephp.org)
  * Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
@@ -9,26 +9,26 @@
  *
  * @copyright     Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
  * @link          http://cakephp.org CakePHP(tm) Project
- * @since         0.1.0
+ * @since         2.0.0
  * @license       http://www.opensource.org/licenses/mit-license.php MIT License
  */
-%>
+#}
 
     /**
      * Delete method
      *
-     * @param string|null $id <%= $singularHumanName %> id.
+     * @param string|null $id {{ singularHumanName }} id.
      * @return \Cake\Http\Response|null Redirects to index.
      * @throws \Cake\Datasource\Exception\RecordNotFoundException When record not found.
      */
     public function delete($id = null)
     {
         $this->request->allowMethod(['post', 'delete']);
-        $<%= $singularName %> = $this-><%= $currentModelName %>->get($id);
-        if ($this-><%= $currentModelName; %>->delete($<%= $singularName %>)) {
-            $this->Flash->success(__('The <%= strtolower($singularHumanName) %> has been deleted.'));
+        ${{ singularName }} = $this->{{ currentModelName }}->get($id);
+        if ($this->{{ currentModelName }}->delete(${{ singularName }})) {
+            $this->Flash->success(__('The {{ singularHumanName|lower }} has been deleted.'));
         } else {
-            $this->Flash->error(__('The <%= strtolower($singularHumanName) %> could not be deleted. Please, try again.'));
+            $this->Flash->error(__('The {{ singularHumanName|lower }} could not be deleted. Please, try again.'));
         }
 
         return $this->redirect(['action' => 'index']);
