--- a/src/Template/Bake/Model/entity.twig
+++ b/src/Template/Bake/Model/entity.twig
@@ -1,4 +1,4 @@
-<%
+{#
 /**
  * CakePHP(tm) : Rapid Development Framework (http://cakephp.org)
  * Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
@@ -9,42 +9,29 @@
  *
  * @copyright     Copyright (c) Cake Software Foundation, Inc. (http://cakefoundation.org)
  * @link          http://cakephp.org CakePHP(tm) Project
- * @since         0.1.0
+ * @since         2.0.0
  * @license       http://www.opensource.org/licenses/mit-license.php MIT License
  */
+#}
+{% set propertyHintMap = DocBlock.buildEntityPropertyHintTypeMap(propertySchema ?: []) %}
+{% set associationHintMap = DocBlock.buildEntityAssociationHintTypeMap(propertySchema ?: []) %}
+{% set annotations = DocBlock.propertyHints(propertyHintMap) %}
 
-$propertyHintMap = $this->DocBlock->buildEntityPropertyHintTypeMap(isset($propertySchema) ? $propertySchema : []);
-$associationHintMap = $this->DocBlock->buildEntityAssociationHintTypeMap(isset($propertySchema) ? $propertySchema : []);
+{%- if associationHintMap %}
+    {%- set annotations = annotations|merge(['']) %}
+    {%- set annotations = annotations|merge(DocBlock.propertyHints(associationHintMap)) %}
+{% endif %}
 
-$annotations = $this->DocBlock->propertyHints($propertyHintMap);
-if(!empty($associationHintMap)) {
-    $annotations[] = "";
-    $annotations = array_merge($annotations, $this->DocBlock->propertyHints($associationHintMap));
-}
-
-$accessible = [];
-if (!isset($fields) || $fields !== false) {
-    if (!empty($fields)) {
-        foreach ($fields as $field) {
-            $accessible[$field] = 'true';
-        }
-    } elseif (!empty($primaryKey)) {
-        $accessible['*'] = 'true';
-        foreach ($primaryKey as $field) {
-            $accessible[$field] = 'false';
-        }
-    }
-}
-%>
+{%- set accessible = Bake.getFieldAccessibility(fields, primaryKey) %}
 <?php
-namespace <%= $namespace %>\Model\Entity;
+namespace {{ namespace }}\Model\Entity;
 
 use Cake\ORM\Entity;
 
-<%= $this->DocBlock->classDescription($name, 'Entity', $annotations) %>
-class <%= $name %> extends Entity
+{{ DocBlock.classDescription(name, 'Entity', annotations)|raw }}
+class {{ name }} extends Entity
 {
-<% if (!empty($accessible)): %>
+{% if accessible %}
 
     /**
      * Fields that can be mass assigned using newEntity() or patchEntity().
@@ -55,18 +42,20 @@ class <%= $name %> extends Entity
      *
      * @var array
      */
-    protected $_accessible = [<%= $this->Bake->stringifyList($accessible, ['quotes' => false]) %>];
-<% endif %>
-<% if (!empty($hidden)): %>
+    protected $_accessible = [{{ Bake.stringifyList(accessible, {'quotes': false})|raw }}];
+{% endif %}
+
+{%- if hidden %}
 
     /**
      * Fields that are excluded from JSON versions of the entity.
      *
      * @var array
      */
-    protected $_hidden = [<%= $this->Bake->stringifyList($hidden) %>];
-<% endif %>
-<% if (empty($accessible) && empty($hidden)): %>
+    protected $_hidden = [{{ Bake.stringifyList(hidden)|raw }}];
+{% endif %}
 
-<% endif %>
+{%- if not accessible and not hidden %}
+
+{% endif %}
 }
