--- a/src/Template/Bake/Element/Controller/index.twig
+++ b/src/Template/Bake/Element/Controller/index.twig
@@ -21,13 +21,13 @@
      */
     public function index()
     {
-{% set belongsTo = Bake.aliasExtractor(modelObj, 'BelongsTo') %}
-{% if belongsTo %}
-        $this->paginate = [
-            'contain' => [{{ Bake.stringifyList(belongsTo, {'indent': false})|raw }}]
-        ];
-{% endif %}
-        ${{ pluralName }} = $this->paginate($this->{{ currentModelName }});
+        {% set belongsTo = Bake.aliasExtractor(modelObj, 'BelongsTo') %}
+        $query =  $this->{{ currentModelName }}
+        ->find('search',['search' => $this->request->query]){% if !belongsTo %};{% endif %}
+        {% if belongsTo %}
+        ->contain([{{ Bake.stringifyList(belongsTo, {'indent': false})|raw }}]);
+        {% endif %}
+        ${{ pluralName }} = $this->paginate($query);
 
         $this->set(compact('{{ pluralName }}'));
         $this->set('_serialize', ['{{ pluralName }}']);
