--- a/webroot/css/front/sass/utils.scss
+++ b/webroot/css/front/sass/utils.scss
@@ -47,40 +47,45 @@
 [data-aspect-ratio="1:2"]:before { padding-top: 200%; }
 [data-aspect-ratio="1:3"]:before { padding-top: 300%; }
 
+@each $name, $hexa in $colors {
+  .color--#{$name} {
+    color: #{$hexa} !important;
+  }
+  .bg--#{$name} {
+    background: #{$hexa} !important;
+  }
+  .section--#{$name}{
+    background: #{$hexa};
+  }
+  .block--#{$name}{
+    background: #{$hexa};
+  }
+  .btn--#{$name}{
+    @include hover-background-lighten($hexa);
+  }
+
+  .hr--#{$name}{
+    background: #{$hexa} !important;
+  }
+
+  .badge--#{$name}{
+    background: #{$hexa};
+  }
+
+  .tag--#{$name}{
+    background: #{$hexa};
+  }
+
+  .label--#{$name}{
+    background: #{$hexa};
+  }
+
+}
+
 /*
  *   UTILS
  *************/
 .utils--absolute-default{position:absolute;top:0;left:0;right:0;bottom:0;}
-
-.utils--margin-mini{margin:$margin--mini;}
-.utils--margin-semi{margin:$margin--semi;}
-.utils--margin-default{margin:$margin--default;}
-.utils--margin-double{margin:$margin--double;}
-
-.utils--vertical-margin-mini{margin:$margin--mini 0;}
-.utils--vertical-margin-semi{margin:$margin--semi 0;}
-.utils--vertical-margin-default{margin:$margin--default 0;}
-.utils--vertical-margin-double{margin:$margin--double 0;}
-
-.utils--horizontal-margin-mini{margin:0 $margin--mini;}
-.utils--horizontal-margin-semi{margin:0 $margin--semi;}
-.utils--horizontal-margin-default{margin:0 $margin--default;}
-.utils--horizontal-margin-double{margin:0 $margin--double;}
-
-.utils--padding-mini{padding:$margin--mini;}
-.utils--padding-semi{padding:$margin--semi;}
-.utils--padding-default{padding:$margin--default;}
-.utils--padding-double{padding:$margin--double;}
-
-.utils--vertical-padding-mini{padding:$margin--mini 0;}
-.utils--vertical-padding-semi{padding:$margin--semi 0;}
-.utils--vertical-padding-default{padding:$margin--default 0;}
-.utils--vertical-padding-double{padding:$margin--double 0;}
-
-.utils--horizontal-padding-mini{padding:0 $margin--mini;}
-.utils--horizontal-padding-semi{padding:0 $margin--semi;}
-.utils--horizontal-padding-default{padding:0 $margin--default;}
-.utils--horizontal-padding-double{padding:0 $margin--double;}
 
 .utils--spacer-mini{height:$margin--mini;}
 .utils--spacer-semi{height:$margin--semi;}
