--- a/webroot/css/admin/sass/theme.scss
+++ b/webroot/css/admin/sass/theme.scss
@@ -81,7 +81,7 @@ label{display:block; font-size: 1.5rem; font-weight: 700;margin-top: 1.5rem; mar
 }
 
 .form-control{
-  font-size: 1.6rem;outline: 0 !important;border-radius: $border--radius;border:1px solid #ddd;
+  font-size: 1.6rem;height: auto;outline: 0 !important;border-radius: $border--radius;border:1px solid #ddd;
   &:focus{outline: 0 !important;box-shadow:none !important;border:1px solid $color--info;}
   &-error{border:1px solid $color--danger;}
 }
