--- a/resources/assets/admin/css/sass/vars.scss
+++ b/resources/assets/admin/css/sass/vars.scss
@@ -1,3 +1,13 @@
+
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Bd.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Bd.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Bd.otf") format("opentype"); font-style:normal;font-weight:800; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-BdIt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-BdIt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-BdIt.otf") format("opentype"); font-style:italic;font-weight:800; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Md.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Md.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Md.otf") format("opentype"); font-style:normal;font-weight:600; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-MdIt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-MdIt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-MdIt.otf") format("opentype"); font-style:italic;font-weight:600; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Roman.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Roman.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Roman.otf") format("opentype"); font-style:normal;font-weight:400; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-It.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-It.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-It.otf") format("opentype"); font-style:italic;font-weight:400; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Lt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Lt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Lt.otf") format("opentype"); font-style:normal;font-weight:300; }
+@font-face { font-family:"HelveticaNeue"; src:url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-LtIt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-LtIt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-LtIt.otf") format("opentype"); font-style:italic;font-weight:300; }
+
 $margin--mini: 10px;
 $margin--semi: 25px;
 $margin--default: 50px;
@@ -17,7 +27,9 @@ $ratios: ('3:1': 33.33%, '2:1': 50%, '16:9': 56.25%, '3:2': 66.66%, '4:3': 75%, 
 /*** VARS -- COLORS (TYPE:LIST / KEY:NAME / VALUE:HEX ) ****/
 $colors: (
 
-  'blue':    #007bff ,
+  'blue':    #2E7CA9 ,
+  'blue-dark': #123447,
+  'blue-light': #55BCF7 ,
   'indigo':  #6610f2 ,
   'purple':  #6f42c1 ,
   'pink':    #e83e8c ,
@@ -30,8 +42,10 @@ $colors: (
 
   'grey': #4A4A4A,
   'grey-light': #E6E5E5,
+  'grey-light-text': #A9A9A9,
   'grey-very-light': #fbfbf9,
   'grey-heavy': #302F2F,
+  'grey-sidebar': #282828,
 
   'black': #000000,
   'white': #FFFFFF,
@@ -48,10 +62,10 @@ $color--link: map-get($colors, 'white');
 
 $link--color: map-get($colors, 'red');
 
-$sidebar--background: map-get($colors, 'grey');
+$sidebar--background: map-get($colors, 'grey-sidebar');
 $sidebar--color: map-get($colors, 'white');
 
-$content--background: map-get($colors, 'grey-very-light');
+$content--background: map-get($colors, 'white');
 $content--color: map-get($colors, 'grey-heavy');
 
 $login--background: map-get($colors, 'red');
@@ -59,4 +73,4 @@ $login--color: map-get($colors, 'white');
 
 $border--radius: 0px;
 
-$font--default: 'Source Sans Pro', sans-serif;
+$font--default: 'HelveticaNeue', sans-serif;
