--- a/resources/assets/front/assets/scss/theme.scss
+++ b/resources/assets/front/assets/scss/theme.scss
@@ -1,30 +1,5 @@
-/*
- *   VARS
- *************/
-$margin--mini:10px;
-$margin--semi:20px;
-$margin--default:40px;
-$margin--double:80px;
-
-$font--default: 'Arial';
-$font--heading: 'Arial';
-
-$break--phone: 767px;
-$break--tablet: 991px;
-$break--desktop: 1199px;
-
-$colors: (
-  'black': #000000,
-  'white': #FFFFFF,
-  'red': red
-);
-
-/*
- *   IMPORTS
- *************/
-@import 'vendor-fix';
+@import 'vars';
 @import 'utils';
-
 
 /*
  *   FONTS
