--- a/resources/assets/admin/assets/scss/theme.scss
+++ b/resources/assets/admin/assets/scss/theme.scss
@@ -1,5 +1,6 @@
 @import '~element-ui/lib/theme-chalk/index.css';
 @import "~bootstrap/scss/bootstrap";
+@import '~select2/dist/css/select2.min.css';
 @import 'vars';
 @import 'utils';
 
