--- a/resources/assets/admin/assets/scss/vars.scss
+++ b/resources/assets/admin/assets/scss/vars.scss
@@ -1,11 +1,6 @@
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-Bd.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Bd.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Bd.otf") format("opentype"); font-style:normal;font-weight:800; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-BdIt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-BdIt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-BdIt.otf") format("opentype"); font-style:italic;font-weight:800; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-Md.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Md.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Md.otf") format("opentype"); font-style:normal;font-weight:600; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-MdIt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-MdIt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-MdIt.otf") format("opentype"); font-style:italic;font-weight:600; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-Roman.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Roman.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Roman.otf") format("opentype"); font-style:normal;font-weight:400; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-It.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-It.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-It.otf") format("opentype"); font-style:italic;font-weight:400; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-Lt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Lt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-Lt.otf") format("opentype"); font-style:normal;font-weight:300; }
-@font-face { font-family:"HelveticaNeue"; src:url("../../fonts/helveticaNeue/HelveticaNeueLTStd-LtIt.woff2") format("woff2"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-LtIt.woff") format("woff"),url("../../../fonts/helveticaNeue/HelveticaNeueLTStd-LtIt.otf") format("opentype"); font-style:italic;font-weight:300; }
+.material-icons {
+  font-family: 'Material Icons'; font-weight: normal; font-style: normal; font-size: 24px;  /* Preferred icon size */ display: inline-block; line-height: 1; text-transform: none; letter-spacing: normal; word-wrap: normal; white-space: nowrap; direction: ltr; /* Support for all WebKit browsers. */ -webkit-font-smoothing: antialiased; /* Support for Safari and Chrome. */ text-rendering: optimizeLegibility; /* Support for Firefox. */ -moz-osx-font-smoothing: grayscale; /* Support for IE. */ font-feature-settings: 'liga';
+}
 
 $margin--mini: 10px;
 $margin--semi: 25px;
@@ -60,6 +55,7 @@ $color--danger: map-get($colors, 'red');
 $color--link: map-get($colors, 'white');
 
 $link--color: map-get($colors, 'red');
+$border--color: map-get($colors, 'grey-light');
 
 $sidebar--background: map-get($colors, 'grey-sidebar');
 $sidebar--color: map-get($colors, 'white');
@@ -72,4 +68,4 @@ $login--color: map-get($colors, 'white');
 
 $border--radius: 0px;
 
-$font--default: 'HelveticaNeue', sans-serif;
+$font--default: Helvetica, Arial, sans-serif;
